minor fix on spacing

--- a/src/app/components/board/board.component.css
+++ b/src/app/components/board/board.component.css
@@ -51,6 +51,7 @@
     flex-direction: column;
     margin-inline: 4px;
     margin-bottom: 60px;
+    padding-top: 24px;
 }
 
 #drawing-canva{
