--- a/src/app/components/realtimeboard/realtimeboard.component.css
+++ b/src/app/components/realtimeboard/realtimeboard.component.css
@@ -50,6 +50,7 @@
     flex-direction: column;
     margin-inline: 4px;
     margin-bottom: 60px;
+    padding-top: 24px;
 }
 
 #drawing-canva{
